# HW-2

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
files/: file2.txt  words.txt  words2.txt
libs/find_words/include/: find_words.h
libs/find_words/src/: find_words.c
libs/find_words_forked/include/: find_words_forked.h
libs/find_words_forked/src/: find_words_forked.c
tests/: stress_test.cpp  stress_test_forked.cpp  tests.cpp  tests_forked.cpp
tests/tests_cover/: example-html-details.html  example-html-details.libs_find_words_forked_src_find_words_forked.c.html  example-html-details.libs_find_words_src_find_words.c.html
